# Open-env

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  validate-submission.sh
server/: app.py
traffic_env/: __init__.py  client.py  models.py
traffic_env/server/: Dockerfile  __init__.py  app.py  baseline_inference.py  environment.py  grader.py  heuristic_controller.py  intersection.py  message_evaluator.py  message_generatort.py  requirements.txt  road.py  simulation.py  task.py  vehicle.py
